fixed CSS bug on smaller screens

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,10 @@ code {
   border-radius: 20px 20px 0px 0px !important;
 }
 
+.rounded-profile {
+  border-radius: 0px 20px 20px 0px !important;
+}
+
 .btn {
   border: 1px solid var(--tertiary) !important;
   outline: none !important;
@@ -94,7 +98,7 @@ img[src="/images/four-pack.png"] {
   border-bottom: 1px solid black;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   header {
     flex-direction: column;
   }
@@ -122,5 +126,15 @@ img[src="/images/four-pack.png"] {
 
   .hero {
     height: 30vh;
+  }
+
+  .btn {
+    width: -webkit-calc(100% - .5rem);
+    width: -moz-calc(100% - .5rem);
+    width: calc(100% - .5rem);
+  }
+
+  .rounded-profile {
+    border-radius: 0px 0px 20px 20px !important;
   }
 }
